--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
         <ion-input type="number" #rendas>
         </ion-input>
         <button ion-button large item-right>
-          <ion-icon name="add-circle"></ion-icon>
+          <ion-icon name="add-circle" (click)="addRenda()"></ion-icon>
         </button>
       </ion-item>
     </ion-list>
