--- a/src/pages/rendas/rendas.html
+++ b/src/pages/rendas/rendas.html
@@ -5,11 +5,14 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>rendas</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Rendas</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addRendas()">
+        <ion-icon class="toolbar-icon" name="add-circle"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
