--- a/src/pages/despesas/despesas.html
+++ b/src/pages/despesas/despesas.html
@@ -1,21 +1,28 @@
-<!--
-  Generated template for the DespesasPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>Despesas</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addDespesas()">
-        <ion-icon class="toolbar-icon" name="add-circle"></ion-icon>
-      </button>
-    </ion-buttons>
   </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
+  <ion-card (click)="editar();">
+    <ion-card-content *ngIf="conteudo">
+      <p>{{ nome }} {{ sobrenome }}</p>
+      <p>{{ idade }} Anos</p>
+    </ion-card-content>
+  </ion-card>
 
+  <ion-fab bottom right>
+    <button ion-fab>
+      <ion-icon name="add"></ion-icon>
+    </button>
+    <ion-fab-list side="top">
+      <button ion-fab (click)="cadastrar();">
+        <ion-icon name="add"></ion-icon>
+      </button>
+      <button ion-fab (click)="remover();">
+        <ion-icon name="trash"></ion-icon>
+      </button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
