--- a/src/pages/despesas-cadastro/despesas-cadastro.html
+++ b/src/pages/despesas-cadastro/despesas-cadastro.html
@@ -11,12 +11,8 @@
       <ion-input type="text" [(ngModel)]="nome"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label stacked>Sobrenome</ion-label>
-      <ion-input type="text" [(ngModel)]="sobrenome"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-label stacked>Idade</ion-label>
-      <ion-input type="text" [(ngModel)]="idade"></ion-input>
+      <ion-label stacked>Valor</ion-label>
+      <ion-input type="number" [(ngModel)]="idade"></ion-input>
     </ion-item>
   </ion-list>
   <button ion-button block (click)="setStorage();">Cadastrar</button>
