--- a/src/pages/despesas/despesas.html
+++ b/src/pages/despesas/despesas.html
@@ -7,8 +7,8 @@
 <ion-content padding>
   <ion-card (click)="editar();">
     <ion-card-content *ngIf="conteudo">
-      <p>{{ nome }} {{ sobrenome }}</p>
-      <p>{{ idade }} Anos</p>
+      <p>Nome: {{ nome }}</p>
+      <p>R$: {{ valor }}</p>
     </ion-card-content>
   </ion-card>
 
