--- a/src/pages/rendas-cadastro/rendas-cadastro.html
+++ b/src/pages/rendas-cadastro/rendas-cadastro.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the RendasCadastroPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>rendas-cadastro</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+    <ion-navbar>
+      <ion-title>Cadastrar Rendas</ion-title>
+    </ion-navbar>
+  </ion-header>
+  
+  <ion-content padding>
+    <ion-list>
+      <ion-item>
+        <ion-label stacked>Nome</ion-label>
+        <ion-input type="text" [(ngModel)]="nome"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Valor</ion-label>
+        <ion-input type="number" [(ngModel)]="idade"></ion-input>
+      </ion-item>
+    </ion-list>
+    <button ion-button block (click)="setStorage();">Cadastrar</button>
+  </ion-content>
