--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,18 +1,39 @@
-<!--
-  Generated template for the IntroPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>intro</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
+  <ion-slides pager>
 
+    <ion-slide class="slide_image">
+      <img src="assets/imgs/ica-slidebox-img-1.png" alt="" />
+      <h2>Meu app Fantastico</h2>
+      <div>
+        <br>
+        <p>Este meu app tera funções incríveis. Ele foi feito pra impressionar você.</p>
+        <p>Ficou curioso? <strong>Veja mais</strong></p>
+        <a (click)="goToTabsPage()">Deixa de lorota...</a>
+      </div>
+    </ion-slide>
+
+    <ion-slide class="slide_image">
+      <img src="assets/imgs/ica-slidebox-img-2.png" alt="" />
+      <h2>Este é o segundo Slide</h2>
+      <a (click)="goToTabsPage()">Deixa de lorota...</a>
+    </ion-slide>
+
+    <ion-slide class="slide_image">
+      <img src="assets/imgs/ica-slidebox-img-3.png" alt="" />
+      <h2>E agora o terceiro</h2>
+      <a (click)="goToTabsPage()">Deixa de lorota...</a>
+    </ion-slide>
+
+    <ion-slide class="slide_image">
+      <img src="assets/imgs/ica-slidebox-img-4.png" alt="" />
+      <h2>Acaboooou</h2>
+      <div>
+        <p>
+          Agora vá lá pra o App!!
+        </p>
+        <a (click)="goToTabsPage()">Até que enfim...</a>
+      </div>
+    </ion-slide>
+
+  </ion-slides>
 </ion-content>
