--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
     <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Rendas" tabIcon="information-circle"></ion-tab>
-    <ion-tab [root]="tab3Root" tabTitle="Despesas" tabIcon="contacts"></ion-tab>
-    <!--<ion-tab [root]="tab4Root" tabTitle="About" tabIcon="paper"></ion-tab>-->
+    <ion-tab [root]="tab2Root" tabTitle="Rendas" tabIcon="cash"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Despesas" tabIcon="pricetags"></ion-tab>
+    <!--<ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>-->
   </ion-tabs>
