--- a/src/pages/renda-edit/renda-edit.html
+++ b/src/pages/renda-edit/renda-edit.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Rendas</ion-title>
+    <ion-title>Adicionar Renda</ion-title>
   </ion-navbar>
 </ion-header>
 
