--- a/src/pages/despesa-edit/despesa-edit.html
+++ b/src/pages/despesa-edit/despesa-edit.html
@@ -1,18 +1,19 @@
-<!--
-  Generated template for the DespesaEditPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>despesa-edit</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Adicionar Despesa</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label stacked>Nome</ion-label>
+      <ion-input type="text" name="nome" [(ngModel)]="model.despesa"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>Valor</ion-label>
+      <ion-input type="number" name="valor" [(ngModel)]="model.valor"></ion-input>
+    </ion-item>
+  </ion-list>
+  <button ion-button block (click)="save()">Salvar</button>
 </ion-content>
