--- a/src/pages/caixa-edit/caixa-edit.html
+++ b/src/pages/caixa-edit/caixa-edit.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Adicionar Renda</ion-title>
+    <ion-title>Adicionar XXX</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -8,7 +8,7 @@
   <ion-list>
     <ion-item>
       <ion-label stacked>Nome</ion-label>
-      <ion-input type="text" name="nome" [(ngModel)]="model.renda"></ion-input>
+      <ion-input type="text" name="nome" [(ngModel)]="model.caixa"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Valor</ion-label>
