--- a/src/pages/despesa/despesa.html
+++ b/src/pages/despesa/despesa.html
@@ -15,7 +15,7 @@
       </ion-card-content>
       <ion-row text-center>
         <ion-col>
-          <button ion-button icon-left clear small (click)='addDespesa(item);'>
+          <button ion-button icon-left clear small (click)='editDespesa(item);'>
             <ion-icon name="create"></ion-icon>
             <div>Editar</div>
           </button>
