--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
     <ion-list>
       <ion-item>
         <ion-label>Renda (R$)</ion-label>
-        <ion-input type="number" readonly #rendas>{{ this.total }}</ion-input>
+        <ion-input type="number" readonly #rendas>{{ total }}</ion-input>
       </ion-item>
     </ion-list>
     <ion-list>
