--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -8,7 +8,7 @@
   <ion-list>
     <ion-item>
       <ion-label stacked>Nome</ion-label>
-      <ion-input type="text" name="caixa" [(ngModel)]="model.caixa"></ion-input>
+      <ion-input type="text" name="caixa" [(ngModel)]="model.descricao"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Valor</ion-label>
