--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,5 +2,5 @@
     <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Renda" tabIcon="cash"></ion-tab>
     <ion-tab [root]="tab3Root" tabTitle="Despesa" tabIcon="pricetags"></ion-tab>
-    <!--<ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>-->
+    <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
   </ion-tabs>
