--- a/src/pages/despesa/despesa.html
+++ b/src/pages/despesa/despesa.html
@@ -8,7 +8,7 @@
   <ion-list>
     <ion-card *ngFor='let item of caixas'>
       <ion-card-header>
-        <h1>{{ item.caixa.caixa }}</h1>
+        <h1>{{ item.caixa.descricao }}</h1>
       </ion-card-header>
       <ion-card-content>
         <h1>R$ {{ item.caixa.valor }}</h1>
