--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,9 +7,6 @@
 </ion-header>
 
 <ion-content padding>
-  <div *ngFor="let item of caixasRendas">
-    {{ item.caixa.valor }}
-  </div>
   <ion-card>
     <ion-card-header style="text-align: center">
       Cálculo Rápido
@@ -17,13 +14,13 @@
     <ion-list>
       <ion-item>
         <ion-label>Renda (R$)</ion-label>
-        <ion-input type="number" readonly #rendas>{{ total }}</ion-input>
+        <ion-input type="number" readonly [(ngModel)]="totalRendas" text-right>{{ this.totalRendas }}</ion-input>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Despesas (R$)</ion-label>
-        <ion-input type="number" readonly #despesas></ion-input>
+        <ion-input type="number" readonly [(ngModel)]="totalDespesas" text-right>{{ totalDespesas }}</ion-input>
       </ion-item>
     </ion-list>
   </ion-card>
