--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
     <ion-list>
       <ion-item>
         <ion-label>Renda (R$)</ion-label>
-        <ion-input type="number" readonly [(ngModel)]="totalRendas" text-right>{{ this.totalRendas }}</ion-input>
+        <ion-input type="number" readonly [(ngModel)]="totalRendas" text-right>{{ totalRendas }}</ion-input>
       </ion-item>
     </ion-list>
     <ion-list>
@@ -22,6 +22,23 @@
         <ion-label>Despesas (R$)</ion-label>
         <ion-input type="number" readonly [(ngModel)]="totalDespesas" text-right>{{ totalDespesas }}</ion-input>
       </ion-item>
+    </ion-list>
+  </ion-card>
+  <ion-card>
+    <ion-card-header style="text-align: center">
+      Restante
+    </ion-card-header>
+    <ion-list>
+      <ion-item>
+        <ion-label>Sobrou (R$)</ion-label>
+        <ion-input type="number" readonly [(ngModel)]="restanteValor" text-right>{{ restanteValor }}</ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-list>
+    <ion-item>
+      <ion-label>% comprometido</ion-label>
+      <ion-input type="number" readonly [(ngModel)]="percRendaComprometida" text-right>{{ percRendaComprometida }}</ion-input>
+    </ion-item>
     </ion-list>
   </ion-card>
   <button ion-button block round (click)="valeAPena()">Calcular</button>
