--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,13 +14,13 @@
     <ion-list>
       <ion-item>
         <ion-label>Renda (R$)</ion-label>
-        <ion-input type="number" readonly [(ngModel)]="totalRendas" text-right>{{ totalRendas }}</ion-input>
+        <ion-input type="number" readonly [(ngModel)]="totalRendas" text-right></ion-input>
       </ion-item>
     </ion-list>
     <ion-list>
       <ion-item>
         <ion-label>Despesas (R$)</ion-label>
-        <ion-input type="number" readonly [(ngModel)]="totalDespesas" text-right>{{ totalDespesas }}</ion-input>
+        <ion-input type="number" readonly [(ngModel)]="totalDespesas" text-right></ion-input>
       </ion-item>
     </ion-list>
   </ion-card>
@@ -31,13 +31,13 @@
     <ion-list>
       <ion-item>
         <ion-label>Sobrou (R$)</ion-label>
-        <ion-input type="number" readonly [(ngModel)]="restanteValor" text-right>{{ restanteValor }}</ion-input>
+        <ion-input type="number" readonly [(ngModel)]="restanteValor" text-right></ion-input>
       </ion-item>
     </ion-list>
     <ion-list>
     <ion-item>
       <ion-label>% comprometido</ion-label>
-      <ion-input type="number" readonly [(ngModel)]="percRendaComprometida" text-right>{{ percRendaComprometida }}</ion-input>
+      <ion-input type="number" readonly [(ngModel)]="percRendaComprometida" text-right></ion-input>
     </ion-item>
     </ion-list>
   </ion-card>
