--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the AboutPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
     <ion-title>about</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
 <ion-content padding>
   <button ion-button block (click)="apagar()">Apagar Tudo</button>
+
+  <br>
+  <button ion-button block round (click)="loadDataCIDATA()">Carregar JSON</button>
+  <ion-list>
+      <ion-item *ngFor='let item of items'>
+        <h1>{{item.data}}</h1>
+        {{item.valor}}
+      </ion-item>
+    </ion-list>
 </ion-content>
