--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -1,12 +1,13 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Sobre</ion-title>
+    <ion-title>Consulta</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <button ion-button block (click)="apagar()">Apagar Tudo</button>
+  <button ion-button (click)="openPicker()">Open Picker</button>
+  <button ion-button (click)="openRemotePicker()">Open Remote JSON Picker</button>
 
-  <br>
+
   <button ion-button block round (click)="loadDataCIDATA()">Carregar JSON</button>
   <ion-list>
     <ion-item *ngFor='let item of items'>
