--- a/src/pages/edit/edit.html
+++ b/src/pages/edit/edit.html
@@ -3,7 +3,6 @@
     <ion-title>{{ transacao }} {{ origem }}</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding>
   <ion-list>
     <ion-item>
@@ -12,11 +11,12 @@
     </ion-item>
     <ion-item>
       <ion-label stacked>Valor</ion-label>
-      <!--<ion-input type="number" name="valor" [(ngModel)]="model.valor"></ion-input>-->
+      <ion-input type="number" name="valor" [(ngModel)]="model.valor"></ion-input>
     </ion-item>
     <ion-item>
-        <input currencyMask name="valor" [(ngModel)]="model.valor" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"/>
+      <input currencyMask name="valor2" [(ngModel)]="model.valor2" [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }"/>
     </ion-item>
   </ion-list>
+
   <button ion-button block (click)="save()">Salvar</button>
 </ion-content>
