--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,12 +8,10 @@
     <ion-list text-center>
       <ion-card-header>Concurso de Apps CIDATA</ion-card-header>
       <h3>Uso de Dados para Cidadania Financeira</h3>
-      <br>
       <p>http://www.cidadata.com.br/</p>
       <br>
       <br>
       <p>Todos os dados podem ser consultados em:</p>
-      <br>
       <p>https://dadosabertos.bcb.gov.br/</p>
     </ion-list>
   </ion-card>
@@ -34,5 +32,6 @@
     </ion-item>
   </ion-card>
   <br>
-  <button ion-button block color="danger" (click)="apagar()">Apagar Tudo</button>
+  <button ion-button block color="danger" (click)="apagar()">Apagar Dados</button>
+  <p>Clique no botão para apagar todos os Dados do App!</p>
 </ion-content>
