--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title>Sobre</ion-title>
+    <ion-title>Informações</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
@@ -33,5 +33,5 @@
   </ion-card>
   <br>
   <button ion-button block color="danger" (click)="apagar()">Apagar Dados</button>
-  <p>Clique no botão para apagar todos os Dados do App!</p>
+  <p>Clique para apagar todos os Dados do App!</p>
 </ion-content>
