--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,5 +3,5 @@
   <ion-tab [root]="tab2Root" tabTitle="Renda" tabIcon="cash"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Despesa" tabIcon="pricetags"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Consulta" tabIcon="search"></ion-tab>
-  <ion-tab [root]="tab5Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Sobre" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
