--- a/src/pages/consulta/consulta.html
+++ b/src/pages/consulta/consulta.html
@@ -28,7 +28,7 @@
     </ion-row>
   </ion-card>
   <ion-card>
-    <ion-card-header text-wrap text-center class="margem">Taxa Média Mensal de Juros - Crédito Pessoal Pessoa Física</ion-card-header>
+    <ion-card-header text-wrap text-center class="margem">Taxa Média Mensal de Juros: Crédito Pessoal Pessoa Física</ion-card-header>
     <ion-list padding>
       <ion-item class="taxas" (click)="dados('credPesConsigSetorPrivado')">
         <div text-wrap>Consignado Trabalhadores do Setor Privado</div>
